Phase 7 completed
